Did not like how my background image resized when stretched page so corrected it

--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -9,7 +9,7 @@ main {
 }
 body {
     background-image: url("record.png");
-    background-size: calc(25% - 100px) auto; 
+    background-size: auto 20%; 
     margin: 0;
 }
 .twdy {
